avoid deprecated public URL constructor
https://inside.java/2023/02/15/quality-heads-up/