@@ -10,6 +10,8 @@ import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
 import java.net.URL;
+import java.net.URISyntaxException;
+import java.net.URI;
 import java.util.Locale;
 
 public class Main {
@@ -83,8 +85,8 @@ public class Main {
 
         public void open(String url) {
             try {
-                open(new URL(url));
-            } catch (MalformedURLException e) {
+                open(new URI(url).toURL());
+            } catch (URISyntaxException | MalformedURLException e) {
                 e.printStackTrace();
             }
         }
